After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687464 - speexdec: Don't unmap or finish_frame an invalid GstBuffer
speexdec: Don't unmap or finish_frame an invalid GstBuffer
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.2
Other All
: Normal critical
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-02 16:24 UTC by Debarshi Ray
Modified: 2012-11-06 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
speexdec: Don't unmap or finish_frame an invalid GstBuffer (2.23 KB, patch)
2012-11-02 16:25 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2012-11-02 16:24:06 UTC
See attached patch.

To reproduce, try making a VoIP call using speex and see the empathy-call logs.
Comment 1 Debarshi Ray 2012-11-02 16:25:21 UTC
Created attachment 227910 [details] [review]
speexdec: Don't unmap or finish_frame an invalid GstBuffer
Comment 2 Tim-Philipp Müller 2012-11-06 20:17:16 UTC
Pushed, with minor style change for better (IMHO) readability.

 commit 8c44361bca80fa4ed2ec6005c624343c7f4ec866
 Author: Debarshi Ray <rishi@gnu.org>
 Date:   Fri Nov 2 16:39:28 2012 +0100

    speexdec: Don't unmap or finish_frame an invalid GstBuffer
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687464


This whole parse_data() function looks a bit weird, and I'm not convinced it's quite right to do finish_frame(NULL,1) if we've just skipped over one single sub-frame as well, but that's something to fix/test for some other time I guess.

gst-launch line to reproduce the issue:

 gst-launch-1.0 audiotestsrc ! speexenc ! rtpspeexpay ! breakmydata probability=0.05 ! rtpspeexdepay ! speexdec ! pulsesink