speexdec: Don't unmap or finish_frame an invalid GstBuffer

https://bugzilla.gnome.org/show_bug.cgi?id=687464